css/custom.css
/* ... */
/*Mobile*/
@media (max-width: 414px){
  div.container {
    position: relative;
    width: 100%;
    max-width: 960px;
    margin: 0;
    padding: 0 20px;
    box-sizing: none;
  }

  .container.mobile {
    margin-left: -5px;
  }

  .mobile_tasks.container{
    padding: 20px 5px;
  }

  .subcontainer2 {
    padding: 0px;
  }

  .mobgrid {
    display: grid;
    max-width: 47%;
    margin-right: 3%;
  }

  .text_image h6{
    margin-bottom: 15px;
    margin-left: 0px;
  }

  .text_image li {
    margin-left: 30px;
  }

  .indent li{
    margin-left: 15px;
  }

  .copyright{
    margin: 0;
    text-align: center;
    font-size: 15px;
  }

  ul.footnav{
    max-width: 100%;
    order:1;
    margin-top: 5%;
    text-align: center;
    float: none;
  }

  ul.footnav li {
    padding: 10px;
  }

  .navigation{
    margin-right: -7.5%;
  }
}

/*.img{
  transition: 2s ease-in-out;
}*/

